plang/testing/logs/false-incorrect/142/program142.p.p
n9ZMw dm2G Kf :- ((ruvN; vT (rsJ (DaxhN) f7d (V5yp) W6V), l t (O3e) w, zvA siBF8 YANgQ (nn EZY uen) S4NB)).


d0Xl (uDn) YVF w3sMK Jv :- ((x (Y) (hZE (yu PJv rDG)) (ufyZf (J))), zJjA (N); iMq HmWZ rMvH (Wu0) aH); grlq (NiNmr) rz, nEA (Z) z (iG9nZ) (qP (M) F FQy (s)); keKR5 (v (h (n sYgo) (P))) ZifQv g (BNoY); g (U5Gy) P gl, lY; f; h (WD) gtuKP (H) (fUR OXy); z4 (U3) s, miUm; ePGE (Q) rhS, iwSQ gCgj vFx; hh82t, p3T (j0aW (uEJk) kJa Ts) (RC); t2xKH A1Si0 j.


v6.
eEEG (U) (mwDDc (tzxYQ uf8 h (pM (y5Rli (nPw (PEm) (UDR) (zmCJ)) KRz (BBd0) (ek)) yH)) (vxMV7) (g GL z (Tv))) (CfP0) zd.


fY (A5n6) oEp pww (P) :- nZO vTtZ (de (sT (ob (bXp BP2l pvh sSj) NUUX (vyr (fT dqiu (uE CdW94) tp AQ) qgk3m)) vee S) (Ls)) (rQp (Y)) (a B); hAhro; w (i ej9s (D) (hgjV (k7xVx h) QV OIdDD)); tQLjT Nhc, o (z E cl chR mWpA) (fgSXs (BUNvf) (ES) iNJ (F)) (IMyoj) s; ik (eL (V) (U)) Nm5F7 (pd lfak (Tr) FWUR).
tk1SQ (iHGkQ) (qz (fb) u4Vz) (VDW) Y.
i (al6L3 ys8B) (tNB4p WB fq EX7W (bXJ (LLNk) O)) (tChr X Yk a2pUr).


ds :- la (LcH) (z) HNa, ((jto (ukAbN))); ((r1N GzrU; oyXAb a3o5)), xw (QcnW) FQTD (od (finoL VqJkl)).

cJkBT sKwA OJSZ UwQ.
? yChZ xS; e cX3 WmYD; mdoSl (G8ccn) (qK (YYYf) (iD WfxC C)), uGJ0 JE88; (dz pU), cjjH (u1tEM T m YMw (TOy)) (gn (aw) (m)) w (RHTkJ), (biy av; cNT), (hqAO (YB) HD cygT w9Xcl).


